--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container flexy">
         <p>Buy shibu inu and get rich..
+            agr pesa duba biswa dega pesa
            
         </p>
     </div>
